package thales.model.protoBuf.serverToClient;

option java_package = "thales.model.protoBuf.serverToClient";
option java_multiple_files = true;

message LocalDateTimeProto {
    required int32 year = 1;
    required int32 month = 2;
    required int32 day = 3;
    required int32 hour = 4;
    required int32 minute = 5;
    required int32 second = 6;
    required int32 nanosecond = 7;
}

message GetUserResponse {
    required int64 userId     = 1;
    required string firstName = 2;
    required string lastName  = 3;
    required bool isEnabled   = 4;
    required bool isReadOnly  = 5;
    required bool sendReports = 6;
    required int32 leverage   = 7;
    required string email     = 8;
    required string comment   = 9;

    required double balance   = 10;
    required double credit    = 11;
    required double taxes     = 12;
}

message GetOpenTradeResponse {
    required int64 tradeId                             = 1;
    required int64 login                               = 2;
    required string symbol                             = 3;
    required int32 tradeType                           = 4;
    required int32 volume                              = 5;
    required LocalDateTimeProto openDateTime           = 6;
    required double openPrice                          = 7;
    optional double stopLoss                           = 8;
    optional double takeProfit                         = 9;
    optional LocalDateTimeProto pendingTradeExpiration = 10;
    required double convRateOpen                       = 11;
    required double commission                         = 12;
    required double swaps                              = 13;
    required double profit                             = 14;
    required double taxes                              = 15;
    required double marginRate                         = 16;
    required LocalDateTimeProto timestamp              = 17;
    required double agentCommission                    = 18;
    required string comment                            = 19;
}

message GetClosedTradeResponse {
    required int64 tradeId                              = 1;
    required int64 login                                = 2;
    required string symbol                              = 3;
    required int32 tradeType                            = 4;
    required int32 volume                               = 5;
    required LocalDateTimeProto openDateTime            = 6;
    required double openPrice                           = 7;
    required LocalDateTimeProto closeDateTime           = 8;
    required double closePrice                          = 9;
    optional double stopLoss                            = 10;
    optional double takeProfit                          = 11;
    optional LocalDateTimeProto pendingOrderExpiration  = 12;
    required double convRateOpen                        = 13;
    required double convRateClosed                      = 14;
    required double commission                          = 15;
    required double swaps                               = 16;
    required double profit                              = 17;
    required double taxes                               = 18;
    required double marginRate                          = 19;
    required LocalDateTimeProto timestamp               = 20;
    required string comment                             = 21;
}
